--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@capacitor/status-bar": "6.0.1",
     "@ionic/angular": "^8.0.0",
     "ionicons": "^7.0.0",
+    "lottie-web": "^5.9.1",
+    "ngx-lottie": "^8.0.1",
     "pusher-js": "^8.4.0-rc2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
